# android-nnapi-example

./: Cargo.toml  README.md
python/: test.py
src/: context.rs  lib.rs  primitives.rs  tensor.rs  test.rs
src/operators/: add.rs  matmul.rs  mod.rs
src/tensor/: mod.rs
